--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "mews/captcha": "^3.2",
         "spatie/laravel-package-tools": "^1.14",
         "spatie/laravel-permission": "^5.9",
-        "jenssegers/agent": "^2.6"
+        "jenssegers/agent": "^2.6",
+        "lab404/laravel-impersonate": "^1.7"
     },
     "license": "MIT",
     "autoload": {
