--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "spatie/laravel-package-tools": "^1.14",
         "spatie/laravel-permission": "^5.9",
         "jenssegers/agent": "^2.6",
-        "lab404/laravel-impersonate": "^1.7"
+        "lab404/laravel-impersonate": "^1.7",
+        "mcamara/laravel-localization": "^1.8"
     },
     "license": "MIT",
     "autoload": {
