--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,12 @@
         "spatie/laravel-permission": "^5.9",
         "jenssegers/agent": "^2.6",
         "lab404/laravel-impersonate": "^1.7",
-        "mcamara/laravel-localization": "^1.8"
+        "mcamara/laravel-localization": "^1.8",
+        "propaganistas/laravel-phone": "^5.0",
+        "astrotomic/laravel-translatable": "^11.12",
+        "flugger/laravel-responder": "^3.3",
+        "moneyphp/iso-currencies": "^3.0",
+        "tightenco/ziggy": "^1.5"
     },
     "license": "MIT",
     "autoload": {
