--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "astrotomic/laravel-translatable": "^11.12",
         "flugger/laravel-responder": "^3.3",
         "moneyphp/iso-currencies": "^3.0",
-        "tightenco/ziggy": "^1.5"
+        "tightenco/ziggy": "^1.5",
+        "jackiedo/timezonelist": "^5.1"
     },
     "license": "MIT",
     "autoload": {
